src/objects/District__c.object
<CustomObject>
    <description>Shows the locations for a district. Used to get GPS values</description>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>The central latitude of the district. This is where maps will center if this district is the focus of the map.</description>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Id__c</fullName>
        <description>Location ID in the Icon Weather Feeds System</description>
        <label>Location Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>The central longitude of the district</description>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region</description>
        <inlineHelpText>Region</inlineHelpText>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Western Uganda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Western Uganda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Uganda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Western Uganda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Eastern Uganda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lake Victoria Basin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Uganda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Uganda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>District</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>District_GPS_Locations</fullName>
        <columns>NAME</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <filterScope>Everything</filterScope>
        <label>District GPS Locations</label>
    </listViews>
    <nameField>
        <label>District Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Districts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>